Fix alignment if there aren't enough photos to fill the screen on desktop
https://github.com/maxvoltar/photo-stream/issues/30

Former-commit-id: 46651884b07b2e183b78e5f4a562f768594a5f6c

--- a/css/master.scss
+++ b/css/master.scss
@@ -80,6 +80,7 @@ body {
 	display: flex;
 	flex-wrap: wrap;
 	position: relative;
+	align-content: flex-start;
 
 	&:after {
     content: "";
